work in progress suricata log parsing

--- a/logstash/pipelines/suricata/11_suricata_logs.conf
+++ b/logstash/pipelines/suricata/11_suricata_logs.conf
@@ -27,12 +27,6 @@ filter {
     # suricata.rfb....                           - examine individually and look at exising RFB stuff
     # suricata.smb....                           - examine individually and look at exising SMB stuff
     # suricata.ssh....                           - examine individually and look at exising SSH stuff
-    # suricata.tls.from_proto                    - normalize with network.protocol?
-    # suricata.tls.notafter/notbefore            - date type
-    # suricata.tls.sni                           - related domain? freq?
-    # suricata.tunnel.dest_ip/dest_port          - normalize into destination?
-    # suricata.tunnel.src_ip/src_port            - normalize into source?
-    # suricata.tunnel.proto                      - map and normalize
 
     # other TODO:
     # parsing old files?
@@ -477,14 +471,52 @@ filter {
                  }
          }
 
+         if ([suricata][tls][from_proto]) {
+           mutate { id => "mutate_merge_suricata_tls_from_proto"
+                   merge => { "[network][protocol]" => "[suricata][tls][from_proto]" } }
+         }
+
         #############################################################################################################################
         # tunnel
-        if ([suricata][tunnel][proto]) {
-          translate {
-            id => "translate_suricata_tunnel_proto"
-            source => "[suricata][tunnel][proto]"
-            target => "[suricata][tunnel][proto]"
-            dictionary_path => "/etc/ip_protocol_number_to_name.yaml"
+        if ([suricata][tunnel]) {
+
+          if ([suricata][tunnel][proto]) {
+            translate {
+              id => "translate_suricata_tunnel_proto"
+              source => "[suricata][tunnel][proto]"
+              target => "[suricata][tunnel][proto]"
+              dictionary_path => "/etc/ip_protocol_number_to_name.yaml"
+            }
+            mutate { id => "mutate_merge_suricata_tunnel_proto"
+                    merge => { "[network][protocol]" => "[suricata][tunnel][proto]" } }
+          }
+
+          if ([suricata][tunnel][src_ip]) {
+            mutate { id => "mutate_merge_suricata_tunnel_src_ip_to_source"
+                    merge => { "[source][ip]" => "[suricata][tunnel][src_ip]" } }
+          }
+          if ([suricata][tunnel][src_port]) {
+            if ([suricata][tunnel][src_port] != "0") {
+              mutate { id => "mutate_merge_suricata_tunnel_src_port_to_source"
+                      merge => { "[source][port]" => "[suricata][tunnel][src_port]" } }
+            } else {
+              mutate { id => "mutate_remove_field_suricata_tunnel_src_port_zero"
+                       remove_field => [ "[suricata][tunnel][src_port]" ] }
+            }
+          }
+
+          if ([suricata][tunnel][dest_ip]) {
+            mutate { id => "mutate_merge_suricata_tunnel_dst_ip_to_destination"
+                    merge => { "[destination][ip]" => "[suricata][tunnel][dest_ip]" } }
+          }
+          if ([suricata][tunnel][dest_port]) {
+            if ([suricata][tunnel][dest_port] != "0") {
+              mutate { id => "mutate_merge_suricata_tunnel_dest_port_to_destination"
+                      merge => { "[destination][port]" => "[suricata][tunnel][dest_port]" } }
+            } else {
+              mutate { id => "mutate_remove_field_suricata_tunnel_dest_port_zero"
+                       remove_field => [ "[suricata][tunnel][dest_port]" ] }
+            }
           }
         }
 
