--- a/logstash/pipelines/suricata/12_suricata_normalize.conf
+++ b/logstash/pipelines/suricata/12_suricata_normalize.conf
@@ -11,10 +11,6 @@ filter {
 
   if ([suricata][dhcp][assigned_ip]) {          mutate { id => "mutate_merge_field_related_ip_suricata_dhcp_assigned_ip"
                                                          merge => { "[related][ip]" => "[suricata][dhcp][assigned_ip]" } } }
-  if ([suricata][tunnel][dest_ip]) {            mutate { id => "mutate_merge_field_related_ip_suricata_tunnel_dest_ip"
-                                                         merge => { "[related][ip]" => "[suricata][tunnel][dest_ip]" } } }
-  if ([suricata][tunnel][src_ip]) {             mutate { id => "mutate_merge_field_related_ip_suricata_tunnel_src_ip"
-                                                         merge => { "[related][ip]" => "[suricata][tunnel][src_ip]" } } }
   if ([suricata][snmp][trap_address]) {         mutate { id => "mutate_merge_normalize_suricata_snmp_trap_address"
                                                          merge => { "[related][ip]" => "[suricata][snmp][trap_address]" } } }
 
@@ -159,6 +155,9 @@ filter {
 
   if ([suricata][smtp][helo]) {      mutate { id => "mutate_merge_field_suricata_smtp_helo_related_hosts"
                                               merge => { "[related][hosts]" => "[suricata][smtp][helo]" } } }
+
+  if ([suricata][tls][sni]) {        mutate { id => "mutate_merge_field_suricata_tls_sni_related_hosts"
+                                              merge => { "[related][hosts]" => "[suricata][tls][sni]" } } }
 
   # Username #########################################################################################################
   # ECS - various -> related.user
