--- a/logstash/pipelines/suricata/13_suricata_convert.conf
+++ b/logstash/pipelines/suricata/13_suricata_convert.conf
@@ -27,4 +27,19 @@ filter {
     }
   }
 
+  if ([suricata][tls][notafter]) {
+    date {
+      id => "date_suricata_tls_notafter"
+      match => [ "[suricata][tls][notafter]", "ISO8601" ]
+      target => "[suricata][tls][notafter]"
+    }
+  }
+  if ([suricata][tls][notbefore]) {
+    date {
+      id => "date_suricata_tls_notbefore"
+      match => [ "[suricata][tls][notbefore]", "ISO8601" ]
+      target => "[suricata][tls][notbefore]"
+    }
+  }
+
 }
