work in progress suricata log parsing

--- a/logstash/pipelines/suricata/11_suricata_logs.conf
+++ b/logstash/pipelines/suricata/11_suricata_logs.conf
@@ -31,6 +31,7 @@ filter {
     # other TODO:
     # parsing old files?
     #
+    # TODO: DNP3 objects overview is broken, probably due to nested :/
 
     #############################################################################################################################
     # If message looks like json, try to parse it as such. Otherwise, drop it like it's hot.
