major work in progress on suricata alert / zeek signature mapping

--- a/logstash/pipelines/enrichment/11_lookups.conf
+++ b/logstash/pipelines/enrichment/11_lookups.conf
@@ -392,6 +392,40 @@ filter {
     }
   } # end if tls.client.server_name
 
+#  if ([threat][framework] == "MITRE ATT&CK") {
+#    ruby {
+#        id => "ruby_mitre_attack_ref_lookups"
+#        init => "
+#          require 'yaml'; $tacticIdMap = YAML.safe_load(File.read('/etc/mitre_attack_tactic_ids.yaml'));
+#        "
+#        code => "
+#          matches = Array.new
+#          begin
+#            event.get('[zeek][signatures][signature_id]').each do |signature|
+#              matches.push(/(.+?)::(.+?)(?:::(.+?))?\s*\[ATT&CK\s*(.+?)\]/.match(signature))
+#            end
+#          rescue Exception => e
+#            event.set('ruby_exception', 'ruby_signatures_attack_extract: ' + e.message)
+#          end
+#          if (matches.length > 0) then
+#              tacticNames = matches.map{ |x| x[1].gsub(' ', '_') }.compact
+#              tacticIds = tacticNames.clone.map(&:clone).map{ |x| $tacticIdMap[x] }.compact
+              #tacticRefs = tacticIds.clone.map(&:clone).map { |x| x.gsub(/\..*/, '').prepend('https://attack.mitre.org/tactics/') }.uniq.compact
+#              techniqueNames = matches.map{ |x| [x[2], x[3]].compact.join(':') }.compact
+#              techniqueIds = matches.map{ |x| x[4] }.compact
+              #techniqueRefs = techniqueIds.clone.map(&:clone).map { |x| x.gsub(/\..*/, '').prepend('https://attack.mitre.org/techniques/') }.uniq.compact
+#              event.set('[threat][tactic][name]', tacticNames.uniq) unless (tacticNames.length == 0)
+#              event.set('[threat][tactic][id]', tacticIds.uniq) unless (tacticIds.length == 0)
+#              event.set('[threat][tactic][reference]', tacticRefs.uniq) unless (tacticRefs.length == 0)
+#              event.set('[threat][technique][name]', techniqueNames.uniq) unless (techniqueNames.length == 0)
+#              event.set('[threat][technique][id]', techniqueIds.uniq) unless (techniqueIds.length == 0)
+#              event.set('[threat][technique][reference]', techniqueRefs.uniq) unless (techniqueRefs.length == 0)
+#              event.set('[threat][framework]', 'MITRE ATT&CK')
+#          end
+#        "
+#    }
+#  }
+
   ################################################################################################
 
   # ja3/ja3s are arrays at this point, as Arkime expects them to be
