--- a/logstash/pipelines/suricata/12_suricata_normalize.conf
+++ b/logstash/pipelines/suricata/12_suricata_normalize.conf
@@ -13,6 +13,10 @@ filter {
                                                          merge => { "[related][ip]" => "[suricata][dhcp][assigned_ip]" } } }
   if ([suricata][snmp][trap_address]) {         mutate { id => "mutate_merge_normalize_suricata_snmp_trap_address"
                                                          merge => { "[related][ip]" => "[suricata][snmp][trap_address]" } } }
+  if ([suricata][tunnel][src_ip]) {             mutate { id => "mutate_merge_field_related_ip_suricata_sunnel_src_ip"
+                                                         merge => { "[related][ip]" => "[suricata][tunnel][src_ip]" } } }
+  if ([suricata][tunnel][dest_ip]) {            mutate { id => "mutate_merge_field_related_ip_suricata_sunnel_dest_ip"
+                                                         merge => { "[related][ip]" => "[suricata][tunnel][dest_ip]" } } }
 
   # Action ############################################################################################################
   # collect all actions/operations/commands under the parent [event][action] array
