--- a/logstash/pipelines/zeek/11_zeek_logs.conf
+++ b/logstash/pipelines/zeek/11_zeek_logs.conf
@@ -4170,11 +4170,8 @@ filter {
     if ([zeek][dns][query]) {
       mutate { id => "mutate_merge_zeek_query"
                merge => { "[dns][host]" => "[zeek][dns][query]" } }
-      # seriously I do not get how merge works
-      mutate { id => "mutate_add_field_zeek_opcode"
-               add_field => { "[@metadata][opcode]" => "QUERY" } }
-      mutate { id => "mutate_merge_zeek_opcode"
-               merge => { "[dns][opcode]" => "[@metadata][opcode]" } }
+      ruby { id => "ruby_add_field_zeek_dns_opcode"
+             code => "event.set('[dns][opcode]', [ 'QUERY', event.get('[dns][opcode]') ].flatten.compact)" }
     }
 
     if ([@metadata][answers_ip]) {
@@ -4951,6 +4948,11 @@ filter {
                                         merge => { "[vulnerability][reference]" => "[rule][reference]" } } }
       if ([rule][author]) {    mutate { id => "mutate_merge_zeek_noticed_mapped_vulnerability_vendor"
                                         merge => { "[vulnerability][scanner][vendor]" => "[rule][author]" } } }
+      if ([zeek][notice][category] =~ /^CVE/) {
+        mutate { id => "mutate_add_field_ecs_zeek_vulnerability_enumeration_cve"
+                 add_field => { "[vulnerability][enumeration]" => "CVE" } }
+        # TODO: map vulnerability.id from plugin CVE name?
+      }
     }
 
   } else if ([log_source] == "ntlm") {
@@ -5086,11 +5088,13 @@ filter {
   } else if ([log_source] == "signatures") {
     #############################################################################################################################
     # signatures.log specific logic
+    #
+    # this has been reworked significantly from its original form to normalize to ECS along with suricata.alert.*
 
     if ("_carved" in [tags]) {
       # Malcolm does some "special" stuff in zeek_carve_logger.py for file carving, sort of hijacking signatures.log for it
 
-      # sub_message contains fuid(s) comma-separated
+      # _carved signature logs' sub_message contains fuid(s) comma-separated
       if ([zeek][signatures][sub_message]) {
         mutate { id => "mutate_split_zeek_signatures_sub_message"
                  split => { "[zeek][signatures][sub_message]" => "," } }
@@ -5115,35 +5119,46 @@ filter {
                     idArray.push(nameAndEngines[1])
                   }
                 }
-                event.set('[zeek][signatures][signature_id]', idArray.uniq)
-                event.set('[zeek][signatures][engine]', matchesHash.keys)
                 event.set('[zeek][signatures][hits]', matchesHash)
-                event.set('[event][hits]', matchesHash.length)"
-        }
-        mutate {
-          id => "mutate_remove_field_zeek_signatures_event_message"
-          remove_field => [ "[zeek][signatures][event_message]" ]
+                event.set('[event][module]', matchesHash.keys)
+                event.set('[event][hits]', matchesHash.length)
+                event.set('[rule][name]', idArray.uniq)
+            "
         }
       }
 
     } else {
-      if ([zeek][signatures][signature_id] =~ /^dpd_/) {
-        # I don't care about DPD matching signatures
-        drop { id => "drop_zeek_ignored_signatures_dpd" }
+      # not _carved, actual zeek signatures.log entries
+
+      if ([zeek][signatures][signature_id]) {
+        if ([zeek][signatures][signature_id] =~ /^dpd_/) {
+          # I don't care about DPD matching signatures
+          drop { id => "drop_zeek_ignored_signatures_dpd" }
+        } else {
+          mutate { id => "mutate_merge_zeen_signature_id_rule_name"
+                   merge => { "[rule][name]" => "[zeek][signatures][signature_id]" } }
+        }
       }
+
+      if ([zeek][signatures][event_message]) {
+        mutate { id => "mutate_add_field_ecs_event_original_signature_event_message"
+                 merge => { "[event][original]" => "[zeek][signatures][event_message]" } }
+      }
+
+    } # carved vs not
+
+    if (![event][module]) {
+      ruby { id => "ruby_add_field_zeek_signature_event_module"
+             code => "event.set('[event][module]', [ 'zeek', event.get('[event][module]') ].flatten.compact)" }
     }
 
-    # ECS - zeek.signatures.engine -> rule.author
-    if ([zeek][signatures][engine]) {       mutate { id => "mutate_merge_field_ecs_rule_author_signatures_engine"
-                                                    merge => { "[rule][author]" => "[zeek][signatures][engine]" } } }
-    # ECS - zeek.signatures.signature_id -> rule.name
-    if ([zeek][signatures][signature_id]) { mutate { id => "mutate_add_field_ecs_rule_id_signature_name"
-                                                    merge => { "[rule][name]" => "[zeek][signatures][signature_id]" } } }
-    # ECS - zeek.signatures.event_message -> rule.description
-    if ([zeek][signatures][event_message]) {    mutate { id => "mutate_add_field_ecs_rule_id_signature_event_message"
-                                                    merge => { "[rule][description]" => "[zeek][signatures][event_message]" } } }
+    # ECS - zeek.signatures.note -> rule.category
+    if ([zeek][signatures][note]) {
+      mutate { id => "mutate_add_field_ecs_zeek_rule_category_signatures_note"
+               merge => { "[rule][category]" => "[zeek][signatures][note]" } }
+    }
 
-    if ('Capa' in [zeek][signatures][engine]) {
+    if ('Capa' in [event][module]) {
       # ECS - populate threat information for MITRE ATT&CK techniques specified by capa hits
       ruby {
           id => "ruby_signatures_attack_extract"
@@ -5166,7 +5181,7 @@ filter {
           code => "
             matches = Array.new
             begin
-              event.get('[zeek][signatures][signature_id]').each do |signature|
+              event.get('[rule][name]').each do |signature|
                 matches.push(/(.+?)::(.+?)(?:::(.+?))?\s*\[ATT&CK\s*(.+?)\]/.match(signature))
               end
             rescue Exception => e
@@ -5190,6 +5205,37 @@ filter {
           "
       }
     } # Capa
+
+    # get more specific than 'Signatures::Sensitive_Signature' if we can
+    if ([rule][category]) and ([rule][category][0] == 'Signatures::Sensitive_Signature') {
+      if ([threat][tactic][name]) {
+        mutate { id => "mutate_merge_zeek_sensitive_signature_tactic"
+                 merge => { "[@metadata][zeek_sensitive_signature_replacement]" => "[threat][tactic][name]" } }
+      } else if ([threat][technique][name]) {
+        mutate { id => "mutate_merge_zeek_sensitive_signature_technique"
+                 merge => { "[@metadata][zeek_sensitive_signature_replacement]" => "[threat][technique][name]" } }
+      } else if ([threat][framework]) {
+        mutate { id => "mutate_merge_zeek_sensitive_signature_framework"
+                 merge => { "[@metadata][zeek_sensitive_signature_replacement]" => "[threat][framework]" } }
+      }
+      if ([@metadata][zeek_sensitive_signature_replacement]) {
+        mutate { id => "remove_field_zeek_sensitive_signature"
+                 remove_field => [ "[rule][category][0]" ] }
+        mutate { id => "mutate_merge_zeek_sensitive_signature_replacement"
+                 merge => { "[rule][category]" => "[@metadata][zeek_sensitive_signature_replacement]" } }
+      } else if ([event][hits]) and ([event][hits] > 1) {
+        mutate { id => "remove_field_zeek_sensitive_signature_multiple"
+                 remove_field => [ "[rule][category][0]" ] }
+        ruby { id => "ruby_add_field_zeek_multiple_signatures"
+               code => "event.set('[rule][category]', [ 'Signatures::Multiple_Signatures', event.get('[rule][category]') ].flatten.compact)" }
+      }
+    }
+
+    # remove signature fields that were mapped to ECS
+    mutate { id => "mutate_remove_fields_zeek_signatures"
+             remove_field => [
+              "[zeek][signatures][event_message]",
+              "[zeek][signatures][note]" ] }
 
   } else if ([log_source] == "sip") {
     #############################################################################################################################
@@ -5857,11 +5903,8 @@ filter {
   if ([zeek][smb_files]) {
 
     if ([event][dataset] == "smb_cmd") {
-      # seriously I do not get how merge works, why can't I just merge the string literal?
-      mutate { id => "mutate_add_field_zeek_tmp_logtype"
-               add_field => { "[@metadata][tmpLogType]" => "smb_files" } }
-      mutate { id => "mutate_merge_zeek_smb_cmd_and_smb_files_logType"
-               merge => { "[event][dataset]" => "[@metadata][tmpLogType]" } }
+      ruby { id => "ruby_add_field_zeek_tmp_logtype_smb_cmd"
+             code => "event.set('[event][dataset]', [ 'smb_files', event.get('[event][dataset]') ].flatten.compact)" }
     }
 
     # ECS - zeek.smb_files.times_created -> file.created
