--- a/logstash/pipelines/suricata/11_suricata_logs.conf
+++ b/logstash/pipelines/suricata/11_suricata_logs.conf
@@ -2,23 +2,6 @@ filter {
 
     # fields TODO:
     # for ones with a *lot* of fields I'm just going to hand-wave a bit and tackle it when i get there
-    #
-    # suricata.alert.category - "Potentially Bad Traffic", "Attempted Administrator Privilege Gain", etc.
-    # suricata.alert.metadata.affected_product - something for ECS vulnerability?
-    # suricata.alert.metadata.attack_target    - ''
-    # suricata.alert.metadata.cve              - ''
-    # suricata.alert.metadata.deployment       - ''
-    # suricata.alert.metadata.former_category  - tags maybe? or maybe just ignore
-    # suricata.alert.metadata.malware_family
-    # suricata.alert.metadata.mitre_tactic_id
-    # suricata.alert.metadata.mitre_tactic_name
-    # suricata.alert.metadata.mitre_technique_id
-    # suricata.alert.metadata.mitre_technique_name
-    # suricata.alert.metadata.performance_impact
-    # suricata.alert.metadata.signature_severity - map to my severity
-    # suricata.alert.metadata.tag                - tags maybe
-    # suricata.alert.signature                   - normalize with my signatures
-    # suricata.alert.signature_id                - ''
 
     # suricata.dnp3....                          - examine individually and look at exising DNP3 stuff
     # suricata.dns.....                          - examine individually and look at exising DNS stuff
@@ -192,121 +175,83 @@ filter {
         if (![network][protocol]) {
 
           if ([suricata][dcerpc]) {
-            mutate { id => "mutate_add_field_suricata_dcerpc"
-                     add_field => { "[@metadata][suricata_dcerpc]" => "dce_rpc" } }
-            mutate { id => "mutate_merge_suricata_dcerpc"
-                     merge => { "[network][protocol]" => "[@metadata][suricata_dcerpc]" } }
+            ruby { id => "ruby_add_field_suricata_dcerpc"
+                   code => "event.set('[network][protocol]', [ 'dce_rpc', event.get('[network][protocol]') ].flatten.compact)" }
           }
           if ([suricata][dhcp]) {
-            mutate { id => "mutate_add_field_suricata_dhcp"
-                     add_field => { "[@metadata][suricata_dhcp]" => "dhcp" } }
-            mutate { id => "mutate_merge_suricata_dhcp"
-                     merge => { "[network][protocol]" => "[@metadata][suricata_dhcp]" } }
+            ruby { id => "ruby_add_field_suricata_dhcp"
+                   code => "event.set('[network][protocol]', [ 'dhcp', event.get('[network][protocol]') ].flatten.compact)" }
           }
           if ([suricata][dnp3]) {
-            mutate { id => "mutate_add_field_suricata_dnp3"
-                     add_field => { "[@metadata][suricata_dnp3]" => "dnp3" } }
-            mutate { id => "mutate_merge_suricata_dnp3"
-                     merge => { "[network][protocol]" => "[@metadata][suricata_dnp3]" } }
+            ruby { id => "ruby_add_field_suricata_dnp3"
+                   code => "event.set('[network][protocol]', [ 'dnp3', event.get('[network][protocol]') ].flatten.compact)" }
           }
           if ([suricata][dns]) {
-            mutate { id => "mutate_add_field_suricata_dns"
-                     add_field => { "[@metadata][suricata_dns]" => "dns" } }
-            mutate { id => "mutate_merge_suricata_dns"
-                     merge => { "[network][protocol]" => "[@metadata][suricata_dns]" } }
+            ruby { id => "ruby_add_field_suricata_dns"
+                   code => "event.set('[network][protocol]', [ 'dns', event.get('[network][protocol]') ].flatten.compact)" }
           }
           if ([suricata][ftp]) {
-            mutate { id => "mutate_add_field_suricata_ftp"
-                     add_field => { "[@metadata][suricata_ftp]" => "ftp" } }
-            mutate { id => "mutate_merge_suricata_ftp"
-                     merge => { "[network][protocol]" => "[@metadata][suricata_ftp]" } }
+            ruby { id => "ruby_add_field_suricata_ftp"
+                   code => "event.set('[network][protocol]', [ 'ftp', event.get('[network][protocol]') ].flatten.compact)" }
           }
           if ([suricata][http]) {
-            mutate { id => "mutate_add_field_suricata_http"
-                     add_field => { "[@metadata][suricata_http]" => "http" } }
-            mutate { id => "mutate_merge_suricata_http"
-                     merge => { "[network][protocol]" => "[@metadata][suricata_http]" } }
+            ruby { id => "ruby_add_field_suricata_http"
+                   code => "event.set('[network][protocol]', [ 'http', event.get('[network][protocol]') ].flatten.compact)" }
           }
           if ([suricata][icmp_code]) or
              ([suricata][icmp_type]) or
              ([suricata][response_icmp_code]) or
              ([suricata][response_icmp_type]) {
-            mutate { id => "mutate_add_field_suricata_icmp"
-                     add_field => { "[@metadata][suricata_icmp]" => "icmp" } }
-            mutate { id => "mutate_merge_suricata_icmp"
-                     merge => { "[network][protocol]" => "[@metadata][suricata_icmp]" } }
+            ruby { id => "ruby_add_field_suricata_icmp"
+                   code => "event.set('[network][protocol]', [ 'icmp', event.get('[network][protocol]') ].flatten.compact)" }
           }
           if ([suricata][ikev2]) {
-            mutate { id => "mutate_add_field_suricata_ikev2"
-                     add_field => { "[@metadata][suricata_ikev2]" => "ikev2" } }
-            mutate { id => "mutate_merge_suricata_ikev2"
-                     merge => { "[network][protocol]" => "[@metadata][suricata_ikev2]" } }
+            ruby { id => "ruby_add_field_suricata_ikev2"
+                   code => "event.set('[network][protocol]', [ 'ikev2', event.get('[network][protocol]') ].flatten.compact)" }
           }
           if ([suricata][krb5]) {
-            mutate { id => "mutate_add_field_suricata_krb5"
-                     add_field => { "[@metadata][suricata_krb5]" => "krb5" } }
-            mutate { id => "mutate_merge_suricata_krb5"
-                     merge => { "[network][protocol]" => "[@metadata][suricata_krb5]" } }
+            ruby { id => "ruby_add_field_suricata_krb5"
+                   code => "event.set('[network][protocol]', [ 'krb5', event.get('[network][protocol]') ].flatten.compact)" }
           }
           if ([suricata][nfs]) {
-            mutate { id => "mutate_add_field_suricata_nfs"
-                     add_field => { "[@metadata][suricata_nfs]" => "nfs" } }
-            mutate { id => "mutate_merge_suricata_nfs"
-                     merge => { "[network][protocol]" => "[@metadata][suricata_nfs]" } }
+            ruby { id => "ruby_add_field_suricata_nfs"
+                   code => "event.set('[network][protocol]', [ 'nfs', event.get('[network][protocol]') ].flatten.compact)" }
           }
           if ([suricata][rdp]) {
-            mutate { id => "mutate_add_field_suricata_rdp"
-                     add_field => { "[@metadata][suricata_rdp]" => "rdp" } }
-            mutate { id => "mutate_merge_suricata_rdp"
-                     merge => { "[network][protocol]" => "[@metadata][suricata_rdp]" } }
+            ruby { id => "ruby_add_field_suricata_rdp"
+                   code => "event.set('[network][protocol]', [ 'rdp', event.get('[network][protocol]') ].flatten.compact)" }
           }
           if ([suricata][rpc]) {
-            mutate { id => "mutate_add_field_suricata_rpc"
-                     add_field => { "[@metadata][suricata_rpc]" => "rpc" } }
-            mutate { id => "mutate_merge_suricata_rpc"
-                     merge => { "[network][protocol]" => "[@metadata][suricata_rpc]" } }
+            ruby { id => "ruby_add_field_suricata_rfc"
+                   code => "event.set('[network][protocol]', [ 'rfc', event.get('[network][protocol]') ].flatten.compact)" }
           }
           if ([suricata][sip]) {
-            mutate { id => "mutate_add_field_suricata_sip"
-                     add_field => { "[@metadata][suricata_sip]" => "sip" } }
-            mutate { id => "mutate_merge_suricata_sip"
-                     merge => { "[network][protocol]" => "[@metadata][suricata_sip]" } }
+            ruby { id => "ruby_add_field_suricata_sip"
+                   code => "event.set('[network][protocol]', [ 'sip', event.get('[network][protocol]') ].flatten.compact)" }
           }
           if ([suricata][smb]) {
-            mutate { id => "mutate_add_field_suricata_smb"
-                     add_field => { "[@metadata][suricata_smb]" => "smb" } }
-            mutate { id => "mutate_merge_suricata_smb"
-                     merge => { "[network][protocol]" => "[@metadata][suricata_smb]" } }
+            ruby { id => "ruby_add_field_suricata_smb"
+                   code => "event.set('[network][protocol]', [ 'smb', event.get('[network][protocol]') ].flatten.compact)" }
           }
           if ([suricata][smtp]) {
-            mutate { id => "mutate_add_field_suricata_smtp"
-                     add_field => { "[@metadata][suricata_smtp]" => "smtp" } }
-            mutate { id => "mutate_merge_suricata_smtp"
-                     merge => { "[network][protocol]" => "[@metadata][suricata_smtp]" } }
+            ruby { id => "ruby_add_field_suricata_smtp"
+                   code => "event.set('[network][protocol]', [ 'smtp', event.get('[network][protocol]') ].flatten.compact)" }
           }
           if ([suricata][snmp]) {
-            mutate { id => "mutate_add_field_suricata_snmp"
-                     add_field => { "[@metadata][suricata_snmp]" => "snmp" } }
-            mutate { id => "mutate_merge_suricata_snmp"
-                     merge => { "[network][protocol]" => "[@metadata][suricata_snmp]" } }
+            ruby { id => "ruby_add_field_suricata_snmp"
+                   code => "event.set('[network][protocol]', [ 'snmp', event.get('[network][protocol]') ].flatten.compact)" }
           }
           if ([suricata][ssh]) {
-            mutate { id => "mutate_add_field_suricata_ssh"
-                     add_field => { "[@metadata][suricata_ssh]" => "ssh" } }
-            mutate { id => "mutate_merge_suricata_ssh"
-                     merge => { "[network][protocol]" => "[@metadata][suricata_ssh]" } }
+            ruby { id => "ruby_add_field_suricata_ssh"
+                   code => "event.set('[network][protocol]', [ 'ssh', event.get('[network][protocol]') ].flatten.compact)" }
           }
           if ([suricata][tftp]) {
-            mutate { id => "mutate_add_field_suricata_tftp"
-                     add_field => { "[@metadata][suricata_tftp]" => "tftp" } }
-            mutate { id => "mutate_merge_suricata_tftp"
-                     merge => { "[network][protocol]" => "[@metadata][suricata_tftp]" } }
+            ruby { id => "ruby_add_field_suricata_tftp"
+                   code => "event.set('[network][protocol]', [ 'tftp', event.get('[network][protocol]') ].flatten.compact)" }
           }
           if ([suricata][tls]) {
-            mutate { id => "mutate_add_field_suricata_tls"
-                     add_field => { "[@metadata][suricata_tls]" => "tls" } }
-            mutate { id => "mutate_merge_suricata_tls"
-                     merge => { "[network][protocol]" => "[@metadata][suricata_tls]" } }
+            ruby { id => "ruby_add_field_suricata_tls"
+                   code => "event.set('[network][protocol]', [ 'tls', event.get('[network][protocol]') ].flatten.compact)" }
           }
         }
 
@@ -365,9 +310,75 @@ filter {
 
         #############################################################################################################################
         # alert
-        mutate {
-                id => "mutate_rename_suricata_alert_severity"
-                rename => { "[suricata][alert][severity]" => "[event][severity]" }
+        if ([suricata][alert]) {
+            # these are normalized along with how signatures are normalized
+
+            # ECS - suricata.alert.* -> event., rule., vulnerability., threat.,
+
+            mutate {
+                id => "mutate_rename_suricata_alert"
+                add_field => { "[event][module]" => "suricata" }
+                rename => { "[suricata][alert][signature]" => "[rule][name]" }
+                rename => { "[suricata][alert][signature_id]" => "[rule][id]" }
+            }
+
+            if ([suricata][alert][metadata][tag]) {
+              mutate { id => "mutate_merge_suricata_alert_metadata_tag"
+                       merge => { "[tags]" => "[suricata][alert][metadata][tag]" } }
+            }
+
+            if ([suricata][alert][category]) {
+              mutate { id => "mutate_merge_suricata_alert_category"
+                       merge => { "[rule][category]" => "[suricata][alert][category]" } }
+            } else if ([suricata][alert][metadata][former_category]) {
+              mutate { id => "mutate_merge_suricata_alert_former_category"
+                       merge => { "[rule][category]" => "[suricata][alert][metadata][former_category]" } }
+            }
+
+            if ([suricata][alert][metadata][affected_product]) {
+              mutate { id => "mutate_merge_suricata_alert_affected_product"
+                       merge => { "[vulnerability][category]" => "[suricata][alert][metadata][affected_product]" } }
+            }
+
+            if ([suricata][alert][metadata][attack_target]) {
+              mutate { id => "mutate_merge_suricata_alert_attack_target"
+                       merge => { "[vulnerability][category]" => "[suricata][alert][metadata][attack_target]" } }
+            }
+
+            if ([suricata][alert][metadata][cve]) {
+                mutate {
+                    id => "mutate_rename_suricata_alert_cve"
+                    rename => { "[suricata][alert][metadata][cve]" => "[vulnerability][id]" }
+                    add_field => { "[vulnerability][enumeration]" => "CVE" }
+                }
+            }
+
+            if ([suricata][alert][metadata][mitre_tactic_id]) or
+               ([suricata][alert][metadata][mitre_tactic_name]) or
+               ([suricata][alert][metadata][mitre_technique_id]) or
+               ([suricata][alert][metadata][mitre_technique_name]) {
+               mutate {
+                   id => "mutate_rename_suricata_alert_mitre"
+                   rename => { "[suricata][alert][metadata][mitre_tactic_id]" => "[threat][tactic][id]" }
+                   rename => { "[suricata][alert][metadata][mitre_tactic_name]" => "[threat][tactic][name]" }
+                   rename => { "[suricata][alert][metadata][mitre_technique_id]" => "[threat][technique][id]" }
+                   rename => { "[suricata][alert][metadata][mitre_technique_name]" => "[threat][technique][name]" }
+                   add_field => { "[threat][framework]" => "MITRE ATT&CK" }
+               }
+            }
+
+            # remove alert fields that were mapped to ECS or not used by malcolm
+            mutate { id => "mutate_remove_fields_suricata_alerts"
+                     remove_field => [
+                      "[suricata][alert][action]",
+                      "[suricata][alert][gid]",
+                      "[suricata][alert][metadata][tag]",
+                      "[suricata][alert][category]",
+                      "[suricata][alert][metadata][former_category]",
+                      "[suricata][alert][metadata][deployment]",
+                      "[suricata][alert][metadata][affected_product]",
+                      "[suricata][alert][metadata][attack_target]",
+                      "[zeek][signatures][note]" ] }
         }
 
         #############################################################################################################################
@@ -492,33 +503,15 @@ filter {
                     merge => { "[network][protocol]" => "[suricata][tunnel][proto]" } }
           }
 
-          if ([suricata][tunnel][src_ip]) {
-            mutate { id => "mutate_merge_suricata_tunnel_src_ip_to_source"
-                    merge => { "[source][ip]" => "[suricata][tunnel][src_ip]" } }
-          }
-          if ([suricata][tunnel][src_port]) {
-            if ([suricata][tunnel][src_port] != "0") {
-              mutate { id => "mutate_merge_suricata_tunnel_src_port_to_source"
-                      merge => { "[source][port]" => "[suricata][tunnel][src_port]" } }
-            } else {
+          if ([suricata][tunnel][src_port]) and ([suricata][tunnel][src_port] == "0") {
               mutate { id => "mutate_remove_field_suricata_tunnel_src_port_zero"
                        remove_field => [ "[suricata][tunnel][src_port]" ] }
-            }
           }
-
-          if ([suricata][tunnel][dest_ip]) {
-            mutate { id => "mutate_merge_suricata_tunnel_dst_ip_to_destination"
-                    merge => { "[destination][ip]" => "[suricata][tunnel][dest_ip]" } }
-          }
-          if ([suricata][tunnel][dest_port]) {
-            if ([suricata][tunnel][dest_port] != "0") {
-              mutate { id => "mutate_merge_suricata_tunnel_dest_port_to_destination"
-                      merge => { "[destination][port]" => "[suricata][tunnel][dest_port]" } }
-            } else {
+          if ([suricata][tunnel][dest_port]) and ([suricata][tunnel][dest_port] == "0") {
               mutate { id => "mutate_remove_field_suricata_tunnel_dest_port_zero"
                        remove_field => [ "[suricata][tunnel][dest_port]" ] }
-            }
           }
+
         }
 
         #############################################################################################################################
