work in progress on suricata dashboards

--- a/logstash/pipelines/suricata/11_suricata_logs.conf
+++ b/logstash/pipelines/suricata/11_suricata_logs.conf
@@ -365,20 +365,35 @@ filter {
                    rename => { "[suricata][alert][metadata][mitre_technique_name]" => "[threat][technique][name]" }
                    add_field => { "[threat][framework]" => "MITRE ATT&CK" }
                }
-            }
+
+               # put tactic (or technique, if not) into rule category as well
+               if ([threat][tactic][name]) {
+                 mutate { id => "mutate_merge_suricata_rule_category_tactic"
+                          merge => { "[@metadata][suricata_rule_category_augment]" => "[threat][tactic][name]" } }
+               } else if ([threat][technique][name]) {
+                 mutate { id => "mutate_merge_suricata_rule_category_technique"
+                          merge => { "[@metadata][suricata_rule_category_augment]" => "[threat][technique][name]" } }
+               } else if ([threat][framework]) {
+                 mutate { id => "mutate_merge_suricata_rule_category_framework"
+                          merge => { "[@metadata][suricata_rule_category_augment]" => "[threat][framework]" } }
+               }
+               if ([@metadata][suricata_rule_category_augment]) {
+                 mutate { id => "mutate_merge_suricata_rule_category_augment"
+                          merge => { "[rule][category]" => "[@metadata][suricata_rule_category_augment]" } }
+               }
+
+            } # MITRE
 
             # remove alert fields that were mapped to ECS or not used by malcolm
             mutate { id => "mutate_remove_fields_suricata_alerts"
                      remove_field => [
-                      "[suricata][alert][action]",
                       "[suricata][alert][gid]",
                       "[suricata][alert][metadata][tag]",
                       "[suricata][alert][category]",
                       "[suricata][alert][metadata][former_category]",
                       "[suricata][alert][metadata][deployment]",
                       "[suricata][alert][metadata][affected_product]",
-                      "[suricata][alert][metadata][attack_target]",
-                      "[zeek][signatures][note]" ] }
+                      "[suricata][alert][metadata][attack_target]" ] }
         }
 
         #############################################################################################################################
