--- a/logstash/pipelines/zeek/11_zeek_logs.conf
+++ b/logstash/pipelines/zeek/11_zeek_logs.conf
@@ -4782,6 +4782,11 @@ filter {
     mutate { id => "mutate_split_zeek_notice_actions"
              split => { "[zeek][notice][actions]" => "," } }
 
+    ruby {
+      id => "ruby_add_field_zeek_notice_event_original"
+      code => " event.set('[event][original]', [event.get('[zeek][notice][msg]'),
+                                                event.get('[zeek][notice][sub]')].compact.join(':'))" }
+
     # split "Category::Subcategory" into two different fields
     ruby {
       id => "ruby_zeek_notice_category_extract"
@@ -4828,16 +4833,21 @@ filter {
                                                       merge => { "[zeek][fuid]" => "[@metadata][decrypted_xor_fuid]" } } }
     }
 
-    # ECS - "Notices" -> rule.ruleset
-    mutate { id => "mutate_add_field_ecs_rule_ruleset_notice_zeek"
-             add_field => { "[rule][ruleset]" => "Zeek Notices" } }
+    # add event.module to make them jive with signatures, suricata alerts, etc.
+    mutate { id => "mutate_add_field_zeek_notice_module"
+             add_field => { "[event][module]" => "zeek" } }
 
     # ECS - zeek.notice.category -> rule.category
-    if ([zeek][notice][category]) {     mutate { id => "mutate_add_field_ecs_rule_category_notice_category"
-                                                add_field => { "[rule][category]" => "%{[zeek][notice][category]}" } } }
+    if ([zeek][notice][category]) {
+      ruby { id => "ruby_add_field_ecs_rule_category_notice_category"
+             code => "event.set('[rule][category]', [ event.get('[zeek][notice][category]'), event.get('[rule][category]') ].flatten.compact)" }
+    }
+
     # ECS - zeek.notice.sub_category -> rule.name
-    if ([zeek][notice][sub_category]) { mutate { id => "mutate_add_field_ecs_rule_category_notice_sub_category"
-                                                add_field => { "[rule][name]" => "%{[zeek][notice][sub_category]}" } } }
+    if ([zeek][notice][sub_category]) {
+      ruby { id => "ruby_add_field_ecs_zeek_rule_name_notice_sub_category"
+             code => "event.set('[rule][name]', [ event.get('[zeek][notice][sub_category]'), event.get('[rule][name]') ].flatten.compact)" }
+    }
 
     # ECS - zeek.notice.category -> rule.author (mapped)
     translate {
@@ -4954,6 +4964,12 @@ filter {
         # TODO: map vulnerability.id from plugin CVE name?
       }
     }
+
+    # remove signature fields that were mapped to ECS or not useful
+    mutate { id => "mutate_remove_fields_zeek_notice"
+             remove_field => [
+              "[zeek][notice][sub_category]",
+              "[zeek][notice][category]" ] }
 
   } else if ([log_source] == "ntlm") {
     #############################################################################################################################
@@ -5142,14 +5158,14 @@ filter {
 
       if ([zeek][signatures][event_message]) {
         mutate { id => "mutate_add_field_ecs_event_original_signature_event_message"
-                 merge => { "[event][original]" => "[zeek][signatures][event_message]" } }
+                 add_field => { "[event][original]" => "%{[zeek][signatures][event_message]}" } }
       }
 
     } # carved vs not
 
     if (![event][module]) {
       ruby { id => "ruby_add_field_zeek_signature_event_module"
-             code => "event.set('[event][module]', [ 'zeek', event.get('[event][module]') ].flatten.compact)" }
+             code => "event.set('[event][module]', [ 'zeek' ].flatten.compact)" }
     }
 
     # ECS - zeek.signatures.note -> rule.category
@@ -5766,16 +5782,24 @@ filter {
       # ECS - "Zeek" -> rule.author
       mutate { id => "mutate_add_field_ecs_rule_author_zeek_weird"
                add_field => { "[rule][author]" => "Zeek" } }
-      # ECS - "Zeek Weird Logs" -> rule.ruleset
-      mutate { id => "mutate_add_field_ecs_rule_ruleset_zeek_weird"
-               add_field => { "[rule][ruleset]" => "Zeek Weird Logs" } }
       # ECS - zeek weird URL -> rule.reference
       mutate { id => "mutate_add_field_ecs_rule_reference_zeek_weird"
                add_field => { "[rule][reference]" => "https://docs.zeek.org/en/current/scripts/base/frameworks/notice/weird.zeek.html" } }
       # ECS - zeek.weird.name -> rule.name
-      mutate { id => "mutate_add_field_ecs_rule_name_weird_name"
-               add_field => { "[rule][name]" => "%{[zeek][weird][name]}" } }
+      ruby { id => "ruby_add_field_ecs_zeek_rule_name_weird_name"
+             code => "event.set('[rule][name]', [ event.get('[zeek][weird][name]'), event.get('[rule][name]') ].flatten.compact)" }
     }
+
+    ruby {
+      id => "ruby_add_field_zeek_weird_event_original"
+      code => " event.set('[event][original]', [event.get('[zeek][weird][name]'),
+                                                event.get('[zeek][weird][addl]')].compact.join(':'))" }
+
+    # remove signature fields that were mapped to ECS or not useful
+    mutate { id => "mutate_remove_fields_zeek_weird"
+             remove_field => [
+              "[zeek][weird][name]",
+              "[zeek][weird][peer]" ] }
 
   } else if ([log_source] == "x509") {
     #############################################################################################################################
