--- a/logstash/pipelines/zeek/11_zeek_logs.conf
+++ b/logstash/pipelines/zeek/11_zeek_logs.conf
@@ -399,7 +399,7 @@ filter {
       id => "dissect_zeek_bsap_ip_rdb"
       # zeek's default delimiter is a literal tab, MAKE SURE YOUR EDITOR DOESN'T SCREW IT UP
       mapping => {
-        "[message]" => "%{[zeek_cols][ts]}	%{[zeek_cols][uid]}	%{[zeek_cols][header_size]}	%{[zeek_cols][mes_seq]}	%{[zeek_cols][res_seq]}	%{[zeek_cols][data_len]}	%{[zeek_cols][sequence]}	%{[zeek_cols][app_func_code]}	%{[zeek_cols][node_status]}	%{[zeek_cols][func_code]}	%{[zeek_cols][data]}"
+        "[message]" => "%{[zeek_cols][ts]}	%{[zeek_cols][uid]}	%{[zeek_cols][header_size]}	%{[zeek_cols][mes_seq]}	%{[zeek_cols][res_seq]}	%{[zeek_cols][data_len]}	%{[zeek_cols][sequence]}	%{[zeek_cols][app_func_code]}	%{[zeek_cols][node_status]}	%{[zeek_cols][func_code]}	%{[zeek_cols][variable_count]}	%{[zeek_cols][variables]}	%{[zeek_cols][variable_value]}"
       }
     }
     if ("_dissectfailure" in [tags]) {
@@ -410,7 +410,7 @@ filter {
       }
       ruby {
         id => "ruby_zip_zeek_bsap_ip_rdb"
-        init => "$zeek_bsap_ip_rdb_field_names = [ 'ts', 'uid', 'header_size', 'mes_seq', 'res_seq', 'data_len', 'sequence', 'app_func_code', 'node_status', 'func_code', 'data' ]"
+        init => "$zeek_bsap_ip_rdb_field_names = [ 'ts', 'uid', 'header_size', 'mes_seq', 'res_seq', 'data_len', 'sequence', 'app_func_code', 'node_status', 'func_code', 'variable_count', 'variables', 'variable_value' ]"
         code => "event.set('[zeek_cols]', $zeek_bsap_ip_rdb_field_names.zip(event.get('[message]')).to_h)"
       }
     }
@@ -423,49 +423,7 @@ filter {
       }
     }
 
-    # for now, drop hex-encoded binary data for size
-    if ([zeek_cols][data]) {
-      mutate { id => "mutate_remove_field_zeek_bsap_ip_rdb_data"
-               remove_field => [ "[zeek_cols][data]" ] }
-    }
-
     mutate { id => "mutate_add_tag_ics_bsap_ip_rdb_data_log"
-             add_tag => [ "ics" ] }
-
-  } else if ([log_source] == "bsap_ip_unknown") {
-    #############################################################################################################################
-    # bsap_ip_unknown.log (dropped for now, see above)
-    # https://github.com/cisagov/ICSNPP
-
-    dissect {
-      id => "dissect_zeek_bsap_ip_unknown"
-      # zeek's default delimiter is a literal tab, MAKE SURE YOUR EDITOR DOESN'T SCREW IT UP
-      mapping => {
-        "[message]" => "%{[zeek_cols][ts]}	%{[zeek_cols][uid]}	%{[zeek_cols][data]}"
-      }
-    }
-    if ("_dissectfailure" in [tags]) {
-      mutate {
-        id => "mutate_split_zeek_bsap_ip_unknown"
-        # zeek's default delimiter is a literal tab, MAKE SURE YOUR EDITOR DOESN'T SCREW IT UP
-        split => { "[message]" => "	" }
-      }
-      ruby {
-        id => "ruby_zip_zeek_bsap_ip_unknown"
-        init => "$zeek_bsap_ip_unknown_field_names = [ 'ts', 'uid', 'data' ]"
-        code => "event.set('[zeek_cols]', $zeek_bsap_ip_unknown_field_names.zip(event.get('[message]')).to_h)"
-      }
-    }
-
-    mutate {
-      id => "mutate_add_fields_zeek_bsap_ip_unknown"
-      add_field => {
-        "[zeek_cols][proto]" => "udp"
-        "[zeek_cols][service]" => "bsap"
-      }
-    }
-
-    mutate { id => "mutate_add_tag_ics_bsap_ip_unknown_log"
              add_tag => [ "ics" ] }
 
   } else if ([log_source] == "bsap_serial_header") {
@@ -513,7 +471,7 @@ filter {
       id => "dissect_zeek_bsap_serial_rdb"
       # zeek's default delimiter is a literal tab, MAKE SURE YOUR EDITOR DOESN'T SCREW IT UP
       mapping => {
-        "[message]" => "%{[zeek_cols][ts]}	%{[zeek_cols][uid]}	%{[zeek_cols][func_code]}	%{[zeek_cols][data]}"
+        "[message]" => "%{[zeek_cols][ts]}	%{[zeek_cols][uid]}	%{[zeek_cols][func_code]}	%{[zeek_cols][variable_count]}	%{[zeek_cols][variables]}	%{[zeek_cols][variable_value]}"
       }
     }
     if ("_dissectfailure" in [tags]) {
@@ -524,7 +482,7 @@ filter {
       }
       ruby {
         id => "ruby_zip_zeek_bsap_serial_rdb"
-        init => "$zeek_bsap_serial_rdb_field_names = [ 'ts', 'uid', 'func_code', 'data' ]"
+        init => "$zeek_bsap_serial_rdb_field_names = [ 'ts', 'uid', 'func_code', 'variable_count', 'variables', 'variable_value' ]"
         code => "event.set('[zeek_cols]', $zeek_bsap_serial_rdb_field_names.zip(event.get('[message]')).to_h)"
       }
     }
@@ -535,12 +493,6 @@ filter {
         "[zeek_cols][proto]" => "serial"
         "[zeek_cols][service]" => "bsap"
       }
-    }
-
-    # for now, drop hex-encoded binary data for size
-    if ([zeek_cols][data]) {
-      mutate { id => "mutate_remove_field_zeek_bsap_serial_rdb_data"
-               remove_field => [ "[zeek_cols][data]" ] }
     }
 
     mutate { id => "mutate_add_tag_ics_bsap_serial_rdb_log"
@@ -586,42 +538,6 @@ filter {
     }
 
     mutate { id => "mutate_add_tag_ics_bsap_serial_rdb_ext_log"
-             add_tag => [ "ics" ] }
-
-  } else if ([log_source] == "bsap_serial_unknown") {
-    #############################################################################################################################
-    # bsap_serial_unknown.log (dropped for now, see above)
-    # https://github.com/cisagov/ICSNPP
-
-    dissect {
-      id => "dissect_zeek_bsap_serial_unknown"
-      # zeek's default delimiter is a literal tab, MAKE SURE YOUR EDITOR DOESN'T SCREW IT UP
-      mapping => {
-        "[message]" => "%{[zeek_cols][ts]}	%{[zeek_cols][uid]}	%{[zeek_cols][data]}"
-      }
-    }
-    if ("_dissectfailure" in [tags]) {
-      mutate {
-        id => "mutate_split_zeek_bsap_serial_unknown"
-        # zeek's default delimiter is a literal tab, MAKE SURE YOUR EDITOR DOESN'T SCREW IT UP
-        split => { "[message]" => "	" }
-      }
-      ruby {
-        id => "ruby_zip_zeek_bsap_serial_unknown"
-        init => "$zeek_bsap_serial_unknown_field_names = [ 'ts', 'uid', 'data' ]"
-        code => "event.set('[zeek_cols]', $zeek_bsap_serial_unknown_field_names.zip(event.get('[message]')).to_h)"
-      }
-    }
-
-    mutate {
-      id => "mutate_add_fields_zeek_bsap_serial_unknown"
-      add_field => {
-        "[zeek_cols][proto]" => "serial"
-        "[zeek_cols][service]" => "bsap"
-      }
-    }
-
-    mutate { id => "mutate_add_tag_ics_bsap_serial_unknown_log"
              add_tag => [ "ics" ] }
 
   } else if ([log_source] == "bacnet_discovery") {
@@ -4150,6 +4066,44 @@ filter {
         }
       }
     }
+
+  } else if ([log_source] == "bsap_ip_rdb") {
+    #############################################################################################################################
+    # bsap_ip_rdb.log specific logic
+
+    ruby {
+      id => "ruby_bsap_ip_rdb_variables"
+      init => "$fields = [ :var, :val ]"
+      code => "
+        vars = event.get('[zeek][bsap_ip_rdb][variables]').to_s.split(',').zip(
+                    event.get('[zeek][bsap_ip_rdb][variable_value]').to_s.split(',')).map{ |x| $fields.zip(x).to_h }
+        event.set('[zeek][bsap_ip_rdb][variables]', vars)
+        event.set('[zeek][bsap_ip_rdb][variable_count]', vars.length)
+      "
+    }
+    mutate { id => "mutate_remove_field_zeek_bsap_ip_rdb_variable_value"
+             remove_field => [ "[zeek][bsap_ip_rdb][variable_value]",
+                               "[zeek][bsap_ip_rdb][data_len]" ] }
+
+
+  } else if ([log_source] == "bsap_serial_rdb") {
+    #############################################################################################################################
+    # bsap_serial_rdb.log specific logic
+
+    ruby {
+      id => "ruby_bsap_serial_rdb_variables"
+      init => "$fields = [ :var, :val ]"
+      code => "
+        vars = event.get('[zeek][bsap_serial_rdb][variables]').to_s.split(',').zip(
+                    event.get('[zeek][bsap_serial_rdb][variable_value]').to_s.split(',')).map{ |x| $fields.zip(x).to_h }
+        event.set('[zeek][bsap_serial_rdb][variables]', vars)
+        event.set('[zeek][bsap_serial_rdb][variable_count]', vars.length)
+      "
+    }
+    mutate { id => "mutate_remove_field_zeek_bsap_serial_rdb_variable_value"
+             remove_field => [ "[zeek][bsap_serial_rdb][variable_value]",
+                               "[zeek][bsap_serial_rdb][data_len]" ] }
+
 
   } else if ([log_source] == "cip_identity") {
     #############################################################################################################################
