suricata work in progress

--- a/logstash/pipelines/suricata/11_suricata_logs.conf
+++ b/logstash/pipelines/suricata/11_suricata_logs.conf
@@ -1,21 +1,5 @@
 filter {
 
-    # fields TODO:
-    # for ones with a *lot* of fields I'm just going to hand-wave a bit and tackle it when i get there
-
-    # suricata.dnp3....                          - examine individually and look at exising DNP3 stuff
-    # suricata.dns.....                          - examine individually and look at exising DNS stuff
-    # suricata.http....                          - examine individually and look at exising HTTP stuff
-    # suricata.rdp....                           - examine individually and look at exising RDP stuff
-    # suricata.rfb....                           - examine individually and look at exising RFB stuff
-    # suricata.smb....                           - examine individually and look at exising SMB stuff
-    # suricata.ssh....                           - examine individually and look at exising SSH stuff
-
-    # other TODO:
-    # parsing old files?
-    #
-    # TODO: DNP3 objects overview is broken, probably due to nested :/
-
     #############################################################################################################################
     # If message looks like json, try to parse it as such. Otherwise, drop it like it's hot.
     if [message] =~ /^{.*}$/ {
@@ -257,6 +241,9 @@ filter {
 
         #############################################################################################################################
         # protocol-specific
+        # NOTE: For Suricata, we're focusing our efforts mostly on the alerts side of things and not
+        # all of the various protocols (dns, dhcp, http, etc.). So there isn't going to be a ton
+        # of normalization for those other protocols here. We may revisit that in the future.
 
         #############################################################################################################################
         # flow
@@ -288,24 +275,6 @@ filter {
           }
 
           # TODO: can we normalize suricata.flow.state with zeek.conn.conn_state_description somewhere?
-        }
-
-
-        #############################################################################################################################
-        # tcp
-        if ([suricata][tcp]) {
-          ruby {
-            id => "ruby_suricata_tcpflags"
-            # TODO: we are just setting the count to 1 becaue we don't have a count really, is there something better?
-            code => "
-              event.set('[tcpflags][ack]', 1) if (event.get('[suricata][tcp][ack]') == 'true')
-              event.set('[tcpflags][fin]', 1) if (event.get('[suricata][tcp][fin]') == 'true')
-              event.set('[tcpflags][psh]', 1) if (event.get('[suricata][tcp][psh]') == 'true')
-              event.set('[tcpflags][rst]', 1) if (event.get('[suricata][tcp][rst]') == 'true')
-              event.set('[tcpflags][syn]', 1) if (event.get('[suricata][tcp][syn]') == 'true')
-              event.set('[tcpflags][urg]', 1) if (event.get('[suricata][tcp][urg]') == 'true')
-            "
-          }
         }
 
         #############################################################################################################################
@@ -397,81 +366,6 @@ filter {
         }
 
         #############################################################################################################################
-        # email
-        mutate {
-                id => "mutate_rename_suricata_email"
-                rename => { "[suricata][smtp][mail_from]" => "[email][src]" }
-                rename => { "[suricata][smtp][rcpt_to]" => "[email][dst]" }
-        }
-
-        #############################################################################################################################
-        # http
-        mutate {
-                id => "mutate_rename_suricata_http"
-                rename => { "[suricata][http][protocol]" => "[http][version]"}
-                rename => { "[suricata][http][status]" => "[http][response][status_code]"}
-        }
-
-        #############################################################################################################################
-        # dhcp
-        if ([suricata][dhcp][assigned_ip]) {
-          mutate { id => "mutate_merge_suricata_dhcp_assigned_ip"
-                   merge => { "[dhcp][host]" => "[suricata][dhcp][assigned_ip]" } }
-        }
-
-        if ([suricata][dhcp][client_mac]) {
-          mutate {
-            id => "mutate_add_fields_suricata_dhcp_source_mac"
-            add_field =>  { "[source][mac]" => "%{[suricata][dhcp][client_mac]}" }
-          }
-          mutate { id => "mutate_merge_suricata_dhcp_client_mac"
-                   merge => { "[dhcp][mac]" => "[suricata][dhcp][client_mac]" } }
-        }
-
-        if ([suricata][dhcp][id]) {
-          mutate { id => "mutate_merge_suricata_dhcp_id"
-                   merge => { "[dhcp][id]" => "[suricata][dhcp][id]" } }
-        }
-
-        if ([suricata][dhcp][dhcp_type]) {
-          mutate { id => "mutate_merge_suricata_dhcp_type"
-                   merge => { "[dhcp][type]" => "[suricata][dhcp][dhcp_type]" } }
-        }
-
-        #############################################################################################################################
-        # dns
-        mutate {
-                id => "mutate_rename_suricata_dns"
-                rename => { "[suricata][dns][id]" => "[dns][id]"}
-                rename => { "[suricata][dns][type]" => "[dns][type]"}
-                rename => { "[suricata][dns][rcode]" => "[dns][response_code]"}
-        }
-
-        #############################################################################################################################
-        # krb5
-        if ([suricata][krb5]) {
-          if ([suricata][krb5][cname] == "<empty>") { mutate { id => "mutate_remove_field_suricata_krb5_cname"
-                                                               remove_field => [ "[suricata][krb5][cname]" ] } }
-          if ([suricata][krb5][realm] == "<empty>") { mutate { id => "mutate_remove_field_suricata_krb5_realm"
-                                                               remove_field => [ "[suricata][krb5][realm]" ] } }
-        }
-
-
-        #############################################################################################################################
-        # smb
-
-        if ([suricata][smb][filename]) {
-          ruby {
-            id => "ruby_suricata_smb_filename_dedoubleslash"
-            path => "/usr/share/logstash/malcolm-ruby/dedoubleslash.rb"
-            script_params => {
-              "source" => "[suricata][smb][filename]"
-              "target" => "[suricata][smb][filename]"
-            }
-          }
-        }
-
-        #############################################################################################################################
         # tls
         mutate { id => "mutate_remove_field_suricata_ja3_strings"
                  remove_field => [ "[suricata][tls][ja3][string]",
@@ -541,7 +435,8 @@ filter {
             "[suricata][drop]",
             "[suricata][packet]",
             "[suricata][packet_info]",
-            "[suricata][payload_printable]"
+            "[suricata][payload_printable]",
+            "[suricata][in_iface]"
           ]
         }
 
